--- a/HTML/静态.html
+++ b/HTML/静态.html
@@ -21,8 +21,8 @@
 
         .top {
             height: 200px;
-        }
 
+        }
         .bootom {
             height: 600px;
             width: 60%;
@@ -35,7 +35,8 @@
         }
         .right,.left {
               height: 100%;
-             float:left
+             /*float:left*/
+             display:inline-block;
         }
         .left {
             width: 60%;
